[package]
name = "saga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["cargo"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "1.3.1"
svg = "0.13.1"
